fix: sidebar logo not visible on mobile

--- a/servio-app/static/css/output.css
+++ b/servio-app/static/css/output.css
@@ -1606,9 +1606,6 @@
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
-  .px-0 {
-    padding-inline: calc(var(--spacing) * 0);
-  }
   .px-1 {
     padding-inline: calc(var(--spacing) * 1);
   }
@@ -2455,6 +2452,11 @@
       padding: calc(var(--spacing) * 0);
     }
   }
+  .sm\:p-2 {
+    @media (width >= 40rem) {
+      padding: calc(var(--spacing) * 2);
+    }
+  }
   .sm\:p-3 {
     @media (width >= 40rem) {
       padding: calc(var(--spacing) * 3);
@@ -2463,11 +2465,6 @@
   .sm\:p-6 {
     @media (width >= 40rem) {
       padding: calc(var(--spacing) * 6);
-    }
-  }
-  .sm\:px-4 {
-    @media (width >= 40rem) {
-      padding-inline: calc(var(--spacing) * 4);
     }
   }
   .sm\:px-5 {
@@ -2493,11 +2490,6 @@
   .sm\:pt-6 {
     @media (width >= 40rem) {
       padding-top: calc(var(--spacing) * 6);
-    }
-  }
-  .sm\:pr-5 {
-    @media (width >= 40rem) {
-      padding-right: calc(var(--spacing) * 5);
     }
   }
   .sm\:text-left {
